@@ -1,0 +1,14 @@
+package ec.cjpq.go4demo1.behavioralpatterns.strategy;
+
+/**
+ * Gang of Four Design Patterns Demo 1
+ * Strategy interface
+ * @author carper, carlosjulioperez@gmail.com
+ * 2016-12-18
+ */
+public interface Strategy{
+	public int doOperation(int num1, int num2);
+}
+
+
+
